...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Selected car statistics" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0KM-dO-LYJ">
                                <rect key="frame" x="122.66666666666669" y="80" width="169" height="20.333333333333329"/>
                                <accessibility key="accessibilityConfiguration" identifier="displayStatsLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Engine and exhaust package ($500)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ciw-3W-csp">
                                <rect key="frame" x="20" y="155.33333333333334" width="277" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="IAT-DK-Qmo">
                                <rect key="frame" x="345" y="189" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="tiresPackageSwitch"/>
                                <connections>
                                    <action selector="tiresPackageToggle:" destination="BYZ-38-t0r" eventType="touchUpInside" id="DgV-xF-Mdx"/>
                                </connections>
                            </switch>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tires package ($500)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y3L-ro-8a5">
                                <rect key="frame" x="20" y="194.33333333333334" width="165.66666666666666" height="21"/>
...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qDJ-tQ-K21">
                                <rect key="frame" x="122.66666666666669" y="105.33333333333333" width="58" height="29.999999999999986"/>
                                <accessibility key="accessibilityConfiguration" identifier="nextCarButton"/>
                                <state key="normal" title="Next car"/>
                                <connections>
                                    <action selector="nextCar:" destination="BYZ-38-t0r" eventType="touchUpInside" id="169-7V-xia"/>
                                </connections>
                            </button>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="ewx-IY-Ehq">
                                <rect key="frame" x="345" y="150" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="engineAndExhaustPackageSwitch"/>
                                <connections>
                                    <action selector="engineAndExhaustPackageToggle:" destination="BYZ-38-t0r" eventType="touchUpInside" id="JAH-pX-QIk"/>
                                </connections>
                            </switch>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="aCE-9A-fkJ">
                                <rect key="frame" x="345" y="228" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="spoilerPackageSwitch"/>
                                <connections>
                                    <action selector="spoilerPackageToggle:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Lm0-lI-WvZ"/>
                                </connections>
                            </switch>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="3S2-2T-6fX">
                                <rect key="frame" x="345" y="267" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="gearboxPackageSwitch"/>
                                <connections>
                                    <action selector="gearboxPackageToggle:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dF4-IG-Q7a"/>
                                </connections>
                            </switch>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Remaining funds" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pdr-Dx-5Vh">
                                <rect key="frame" x="266" y="320" width="128" height="21"/>
                                <accessibility key="accessibilityConfiguration" identifier="remainingFundsLabel"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
...
