...
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xjo-ur-hBz">
                                <rect key="frame" x="316" y="562" width="49" height="61"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                <state key="normal" title="CLR"/>
                                <connections>
                                    <action selector="clearButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="QHF-kN-f51"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZmU-Dv-SlX">
                                <rect key="frame" x="54" y="359" width="60" height="40"/>
...
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IP0-l8-hur">
                                <rect key="frame" x="265" y="666" width="37" height="47"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                <state key="normal" title="+/-"/>
                                <connections>
                                    <action selector="changeSign:" destination="BYZ-38-t0r" eventType="touchUpInside" id="86B-QG-BQL"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HbV-os-TTQ">
                                <rect key="frame" x="104" y="670" width="59" height="40"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                <state key="normal" title="Enter"/>
                                <connections>
                                    <action selector="enter:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pV4-x9-bXh"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EcM-Hr-jR9">
                                <rect key="frame" x="49" y="93" width="316" height="98"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="display">
                                    <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
...
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7uF-Yl-4Tj">
                                <rect key="frame" x="49" y="574" width="47" height="38"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" pointSize="26"/>
                                <state key="normal" title="Eval"/>
                                <connections>
                                    <action selector="eval:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Q4X-Vc-RnM"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nOz-BJ-q1w">
                                <rect key="frame" x="307" y="463" width="46" height="44"/>
...
