...
        let alert = UIAlertController(title: "Invalid number", message: "Numbers must be 3 digits or less", preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "Close", style: .default, handler: nil))
        self.present(alert, animated: true)
    }
    
    func zeroAlert() {
        let alert = UIAlertController(title: "Ya done goofed", message: "Oop!", preferredStyle: .alert)
        alert.addAction(UIAlertAction(title: "I'm a clown", style: .default, handler: nil))
        self.present(alert, animated: true)
    }
    
    // Buttons to take user input
    @IBAction func zero(_ sender: Any) {
        digitEntered(digit: "0")
...
